--- a/css/Pagestyle.css
+++ b/css/Pagestyle.css
@@ -65,15 +65,17 @@ header {
 
 .block { width:100%; height:100%;}
 
+.logoIMG {
+	margin-top:80px;
+	width: 50vw;
+	margin-bottom:100px;
+}
 
-
-
-
-
+.updateText { font-weight: 800; font-size: 2vw; color: #858383; }
 
 footer {
 	width:100%;
 	background-color: #191919;
-	height: 5vw;
-	margin-top: 30px;
+	position: fixed;
+    left: 0; bottom: 0;
 }
